--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/party-time.js",
   "scripts": {
     "test": "mocha --reporter spec",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*",
     "minify": "uglifyjs lib/party-time.js --comments -c -m -o lib/party-time.min.js"
   },
   "repository": {
@@ -29,6 +30,8 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.0.2",
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2"
   }
 }
