--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --reporter spec",
     "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*",
-    "minify": "uglifyjs lib/party-time.js --comments -c -m -o lib/party-time.min.js"
+    "minify": "uglifyjs lib/party-time.js --comments -c -m -o lib/party-time.min.js",
+    "dox": "documentation build lib/party-time.js -f md > API.md"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "coveralls": "^2.13.1",
+    "documentation": "^5.2.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2"
   }
