--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "package-preamble": "^0.1.0",
     "rollup": "^0.50.0",
     "rollup-plugin-json": "^2.3.0",
-    "tape": "^4.10.0"
+    "tape": "^4.10.0",
+    "uglify-js": "^3.4.9"
   }
 }
